# DD-system

./: Bath_NRZ_DML.m  Bath_NRZ_VCSEL.m  Bath_NRZ_VCSEL1.m  Bath_PAM4.m  Bath_PAM4_1.m  Bath_PAM4_10km.m  Bath_PAM4_10km_1.m  Bath_PAM4_DML.m  Bath_PAM4_DML1.m  Bath_PAM4_EML.m  Bath_PAM4_EML1.m  Bath_PAM4_SOA.m  Bath_PAM4_SOA1.m  DDTx.m  DspSyncDecoding.m  EqualizationDD.m  MaximumLikelihoodDetector.m  PAM_Equ.m  README.md  SymbolSynchronizer.m  calcLLR_MIMO.m  conv_filter_Note.m  ddGeneration.m  ddSystemTrain.m  ftnTran.m  noiseWhitening.m  searchBestParametersEq.m
DSP/: DFE_LMS.m  DFE_RLS.m  Duob.m  FFE_LMS.m  FFE_RLS.m  FiberDispComp.m  MMSE_Filter.m  MMSE_TDE.m  Modified_APR_PostFilter_LMS_Train.m  Modified_APR_PostFilter_RLS_Train.m  Modified_PR_PostFilter_LMS_Train.m  Modified_PR_PostFilter_RLS_Train.m  PR_PostFilter_LMS_Train.m  abf_lms.m  adam.m  cal_lut.m  cal_lut_avg.m  cdc.m  ffe_dfe_k_sps_lms.m  ffe_k_sps_lms.m  find_sym_patterns.m  getE.m  getMMSEW.m  getPrsPulse.m  getcutoff.m  iqdelay.m  my_ffe_dfe_k_sps_lms.m  my_ffe_k_sps_lms.m  my_pec.m  my_pec_advanced.m  my_pnc.m  my_pnc_enhanced.m  pec.m  pnc.m  pnc_enhanced.m  prsFilter.m  rolling_window.m  rolling_window_central.m  volterra_dfe_lms.m
Decode/: QAM8Demapping.m  QAM8mapping.m  QAMdecision.m  QAMmapping.m  pam16demod.m  pam4demod.m  pam8demod.m
DeepFTN/: FTN_test.m  FTN_train_CNN.m  FTN_train_DNNbenchmark.m
FTN/: duobAnalysis.m  prsAnalyse.m
Fig/: CCDM_THP.fig  CCDM_THP_alpha.fig  Note.pptx  THP1.fig  (+7 more)
MLSE/C++/: CMakeLists.txt  build.sh  test_ML.cpp
MLSE/C++/src/: CMakeLists.txt  ML.cpp  ML.hpp
(+163 files in other folders)
